# dddpy

./: .gitignore  pyproject.toml
.devcontainer/: Dockerfile
dddpy/domain/: ddd_enum.py
dddpy/domain/status/: status.py
dddpy/infrastructure/: enum_type.py
dddpy/infrastructure/sqlite/book/: book_dto.py
