[tool.poetry]
name = "dddpy"
version = "0.9.0"
description = "Python DDD example using FastAPI"
authors = ["odacchi <lucied2007@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10.4"
SQLAlchemy = "^1.3.23"
pydantic = "^1.10.2"
fastapi = "^0.85.1"
uvicorn = "^0.19.0"
shortuuid = "^1.0.9"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.800"
pytest = "^6.2.2"
isort = "^5.7.0"
pylint = "^2.6.2"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
